[LFC][IFC] Fix fast/block/positioning/047.html https://bugs.webkit.org/show_bug.cgi?id=245731

Reviewed by Antti Koivisto.

When searching for the last display box associated with a particular layout box (e.g. text box) we need to skip root inline boxes to able able to find fragments on subsequent lines.

* Source/WebCore/layout/formattingContexts/inline/InlineFormattingGeometry.cpp:

Canonical link: https://commits.webkit.org/254928@main